--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flappy Bird</title>
     <link rel="stylesheet" href="./css/fon.css" type="text/css" />
-    <script src="./js/classes.js" defer></script>
+    <script src="./audio/die.wav" defer></script>
     <script src="./js/constants.js" defer></script>
     <script src="./js/main.js" defer></script>
   </head>
