--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="../css/fon.css" type="text/css" />
+    <link rel="stylesheet" href="./css/fon.css" type="text/css" />
     <script src="./js/constants.js" defer></script>
     <script src="./js/classes.js" defer></script>
     <script src="./js/main.js" defer></script>
